--- a/src/components/latecommers/StudenTable.css
+++ b/src/components/latecommers/StudenTable.css
@@ -1,4 +1,4 @@
-.latecomers-page {
+/* .latecomers-page {
   width: 100%;
   min-height: 100vh;
   background-color: #f7fafc;
@@ -94,4 +94,4 @@
     margin-bottom: 0;
     white-space: nowrap;
   }
-}
+} */
